<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/logout"
        android:title="@string/log_out" />
    <item
        android:id="@+id/mute"
        android:icon="@drawable/ic_music"
        android:title="@string/mute"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/unmute"
        android:icon="@drawable/ic_music_off"
        android:title="@string/unmute"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/changeLang"
        android:icon="@drawable/ic_lang"
        android:title="@string/change_language"
        android:visible="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:visible="true"
        app:showAsAction="ifRoom"/>

</menu>