<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/welcome_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_app_logo" />

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/croissant_one"
        android:text="@string/mawrady_login"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/authentication_title_text_size"
        app:layout_constraintBottom_toTopOf="@+id/mawardy_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/mawardy_button"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:text="@string/login_mawardy"
        app:layout_constraintBottom_toTopOf="@+id/google_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/google_button"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:text="@string/login_google"
        android:theme="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
        app:layout_constraintBottom_toTopOf="@+id/facebook_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mawardy_button"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/facebook_button"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:text="@string/login_facebook"
        android:theme="@style/FirebaseUI.Button.AccountChooser.FacebookButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_button"
        app:layout_constraintWidth_percent="0.8" />
</androidx.constraintlayout.widget.ConstraintLayout>