<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.authentication.signup.SignupActivity">

            <TextView
                android:id="@+id/signup_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/signup"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- First Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstname_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signup_label"
                app:layout_constraintWidth_percent="0.9">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ACCEDD"
                    android:hint="@string/firstname"
                    android:inputType="text"
                    android:textColorHint="@color/colorPrimaryDark" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Last Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastname_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/firstname_layout"
                app:layout_constraintWidth_percent="0.9">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ACCEDD"
                    android:hint="@string/lastname"
                    android:inputType="text"
                    android:textColorHint="@color/colorPrimaryDark" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Username -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lastname_layout"
                app:layout_constraintWidth_percent="0.9">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ACCEDD"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:textColorHint="@color/colorPrimaryDark" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Phone -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/username_layout"
                app:layout_constraintWidth_percent="0.9">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ACCEDD"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:textColorHint="@color/colorPrimaryDark" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- E-mail -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_layout"
                app:layout_constraintWidth_percent="0.9">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ACCEDD"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/colorPrimaryDark" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_layout"
                app:layout_constraintWidth_percent="0.9"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ACCEDD"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorPrimaryDark" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Confirm Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_layout"
                app:layout_constraintWidth_percent="0.9"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ACCEDD"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorPrimaryDark" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/create_new_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="20dp"
                android:text="@string/create_new_account"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/confirm_password_layout"
                app:layout_constraintWidth_percent="0.9" />

            <TextView
                android:id="@+id/login_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/already_have_an_account_sign_in"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_new_button"
                app:layout_constraintWidth_percent="0.9" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>